--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
 .config/certificates/
 .config/mpd/log
+
+
+.config/fontconfig/
+.config/gtk-3.0/
+.config/i3/config.bak
+.config/i3/i3_guide.pdf
+.config/i3/i3_guide.rmd
+.config/mpd/
+.config/mpv/
+.config/ncmpcpp/
+.config/qutebrowser/
+.config/ranger/
+.config/ss/
+.config/startpage/
+.config/user-dirs.dirs
+.config/user-dirs.locale
+.config/wall.png
+.config/yad.conf
+.config/zathura/
+.gtkrc-2.0
+
