--- a/.config/i3blocks/config
+++ b/.config/i3blocks/config
@@ -26,28 +26,27 @@
 # Each block command defaults to the script name to avoid boilerplate.
 #command=/usr/lib/i3blocks/$BLOCK_NAME
 command=~/.config/i3blocks/scripts/$BLOCK_NAME
+#separator=false
 #separator_block_width=15
-separator_block_width=5
+separator_block_width=20
 #markup=none
 markup=pango
 
-# Part 1
+[bandwidth]
+#label=
+interval=1
+
+#[bandwidth]
+##instance=enp0s25;out
+#instance=wlp3s0;out
+#label=
+#interval=1
 
 [volume]
 #label=
 #interval=5
 interval=once
 signal=10
-
-[bandwidth]
-instance=enp0s25;in
-label=
-interval=1
-
-[bandwidth]
-instance=enp0s25;out
-label=
-interval=1
 
 # Part 2
 
@@ -67,8 +66,10 @@ interval=5
 # Part 3
 
 [cpu]
-label=
+#label=
+label=
 interval=2
+
 
 [memory]
 #label=
@@ -77,7 +78,8 @@ instance=mem;custom
 interval=30
 
 [load]
-label=
+#label=
+label=
 interval=10
 
 [battery]
@@ -127,9 +129,9 @@ interval=5
 
 # Part 6
 
-[locale]
-label=
-interval=once
+#[locale]
+#label=
+#interval=once
 
 #[mail]
 #label=
@@ -164,8 +166,8 @@ interval=once
 #instance=rhythmbox
 #interval=5
 
-[process]
-label="process"
+#[process]
+#label="process"
 #instance=http
 #label=
 #interval=10
@@ -211,10 +213,10 @@ interval=60
 #interval=5
 
 # Part 11
-[usb]
-instance=PhotoSmart
-label=
-interval=10
+#[usb]
+#instance=PhotoSmart
+#label=
+#interval=10
 
 [datetime]
 #label=
@@ -233,12 +235,14 @@ interval=5
 
 # Part 12
 
-[window]
-command=~/.config/i3blocks/scripts/scroll $BLOCK_NAME
-label=
-markup=pango
-interval=repeat
+#[window]
+#command=~/.config/i3blocks/scripts/scroll $BLOCK_NAME
+#label=
+#markup=pango
+#interval=repeat
 
 #[keymap]
 #label=
 #interval=10
+
+[separator]
