1. add zsh 2. change i3 key combination
 要提交的变更：
	修改：     .bashrc
	新文件：   .common/.common_alias
	新文件：   .common/.common_profile
	修改：     .config/i3/config
	新文件：   .local/share/fonts/.uuid
	新文件：   .local/share/fonts/Apple Color Emoji.ttc
	新文件：   .local/share/fonts/PowerlineSymbols.otf
	新文件：   .local/share/fonts/WEBDINGS.TTF
	新文件：   .local/share/fonts/WINGDNG2.ttf
	新文件：   .local/share/fonts/WINGDNG3.ttf
	新文件：   .local/share/fonts/mac/.uuid
	新文件：   .local/share/fonts/mac/Wingdings 2.ttf
	新文件：   .local/share/fonts/mac/Wingdings 3.ttf
	新文件：   .local/share/fonts/mac/Wingdings.ttf
	新文件：   .local/share/fonts/mac/webdings.ttf
	新文件：   .local/share/fonts/ms/.uuid
	新文件：   .local/share/fonts/ms/segoeui.ttf
	新文件：   .local/share/fonts/ms/segoeuib.ttf
	新文件：   .local/share/fonts/ms/segoeuii.ttf
	新文件：   .local/share/fonts/ms/segoeuil.ttf
	新文件：   .local/share/fonts/ms/segoeuiz.ttf
	新文件：   .local/share/fonts/ms/symbol.ttf
	新文件：   .local/share/fonts/mtextra.ttf
	新文件：   .local/share/fonts/mtextra/.uuid
	新文件：   .local/share/fonts/mtextra/mtextra.ttf
	新文件：   .local/share/fonts/mtextra/mtextraplain.ttf
	新文件：   .local/share/fonts/otfs/.uuid
	新文件：   .local/share/fonts/otfs/Font Awesome 5 Brands-Regular-400.otf
	新文件：   .local/share/fonts/otfs/Font Awesome 5 Free-Regular-400.otf
	新文件：   .local/share/fonts/otfs/Font Awesome 5 Free-Solid-900.otf
	新文件：   .local/share/fonts/symbol.ttf
	新文件：   .local/share/fonts/ttf/.uuid
	新文件：   .local/share/fonts/ttf/Hack-Bold.ttf
	新文件：   .local/share/fonts/ttf/Hack-BoldItalic.ttf
	新文件：   .local/share/fonts/ttf/Hack-Italic.ttf
	新文件：   .local/share/fonts/ttf/Hack-Regular.ttf
	新文件：   .local/share/fonts/ttf/Symbola.ttf
	新文件：   .local/share/fonts/ttf/Symbola.zip
	新文件：   .local/share/fonts/ttf/Symbola_Hinted.ttf
	新文件：   .local/share/fonts/wingding.ttf
	新文件：   .local/share/fonts/wps-office/.uuid
	新文件：   .local/share/fonts/wps-office/FZCCHK.TTF
	新文件：   .local/share/fonts/wps-office/FZFSK.TTF
	新文件：   .local/share/fonts/wps-office/FZHTK.TTF
	新文件：   .local/share/fonts/wps-o

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -59,15 +59,20 @@ exec $term
 
 # set primary monitor
 exec --no-startup-id setprimarydisplay
+#exec --no-startup-id setdisplay
 
 # set two monitors
 #exec xrandr --output LVDS-1 --primary --mode 1600x900 --pos 0x1020 --rotate normal --output VGA-1 --mode 1920x1080 --pos 1600x0 --rotate left
+#exec xrandr --output LVDS1 --primary --mode 1366x768 --pos 0x312 --rotate normal --output HDMI1 --mode 1920x1080 --pos 1366x0 --rotate normal
+exec xrandr --output HDMI1 --mode 1920x1080 --pos 0x0 --rotate normal --output LVDS1 --primary --mode 1366x768 --pos 256x1080 --rotate normal
+#exec sh ~/.screenlayout/hdmi-1080-tv-and-laptop.sh
 
 # Start Nutstore
 #exec --no-startup-id nutstore-daemon
 
 # Start Dropbox
-exec systemctl --user start dropbox@jae
+#exec systemctl --user start dropbox@jae
+exec /usr/bin/env "/home/jae/.dropbox-dist/dropboxd"
 
 # Start IME
 #exec --no-startup-id ibus-daemon -d -x
@@ -198,8 +203,7 @@ bindsym $mod+q          [con_id="__focused__" instance="^(?!dropdowncalc|tmuxdd)
 bindsym $mod+Shift+q    exec --no-startup-id prompt "Exit i3?" "i3-msg exit"
 
 #bindsym $mod+w          exec --no-startup-id $TRUEBROWSER
-#bindsym $mod+w          exec --no-startup-id i3-keyboard-shortcuts $TRUEBROWSER
-bindsym $mod+w          exec --no-startup-id i3-keyboard-shortcuts $CORPBROWSER
+bindsym $mod+w          exec --no-startup-id i3-keyboard-shortcuts $TRUEBROWSER
 bindsym $mod+Shift+w    exec --no-startup-id $TRUEBROWSER
 
 #bindsym $mod+e          exec $term -e neomutt -F .config/mutt/muttrc
@@ -210,20 +214,20 @@ bindsym $mod+r          exec --no-startup-id i3-keyboard-shortcuts ranger
 #bindsym $mod+Shift+r    exec $term -e sudo ranger /
 bindsym $mod+Shift+r    exec $term -e ranger
 
-bindsym $mod+t          split toggle
+bindsym $mod+t          exec --no-startup-id i3-keyboard-shortcuts electronic-wechat
 #bindsym $mod+Shift+t    gaps inner current set 5; gaps outer current set 5
 
 bindsym $mod+y          exec $term -e calcurse
 bindsym $mod+Shift+y    exec --no-startup-id "bash ~/.scripts/i3resize left"
 
 #bindsym $mod+u          exec --no-startup-id ddspawn tmuxdd
-bindsym $mod+u          exec --no-startup-id i3-keyboard-shortcuts $TRUEBROWSER
+bindsym $mod+u          exec --no-startup-id i3-keyboard-shortcuts $CORPBROWSER
 bindsym $mod+Shift+u    exec --no-startup-id "bash ~/.scripts/i3resize down"
 
 bindsym $mod+i          exec $term -e htop
 bindsym $mod+Shift+i    exec --no-startup-id "bash ~/.scripts/i3resize up"
 
-bindsym $mod+o          sticky toggle
+bindsym $mod+o          exec --no-startup-id i3-keyboard-shortcuts keeweb
 bindsym $mod+Shift+o    exec --no-startup-id "bash ~/.scripts/i3resize right"
 
 bindsym $mod+p          exec --no-startup-id lmc toggle
@@ -280,7 +284,8 @@ bindsym $mod+Shift+b    floating toggle; sticky toggle; exec --no-startup-id bot
 bindsym $mod+n          exec $term -e newspod
 bindsym $mod+Shift+n    exec --no-startup-id linkhandler
 
-bindsym $mod+m          exec --no-startup-id $term -e ncmpcpp
+#bindsym $mod+m          exec --no-startup-id $term -e ncmpcpp
+bindsym $mod+m          exec --no-startup-id i3-keyboard-shortcuts netease-cloud-music
 bindsym $mod+Shift+m    exec --no-startup-id lmc mute
 
 # #---Workspace Bindings---# #
