add ranger configuration fix issue different system different input method
 要提交的变更：
	修改：     .Xresources
	修改：     .bashrc
	修改：     .common/.common_profile
	修改：     .config/i3/config
	新文件：   .config/ranger/bookmarks
	新文件：   .config/ranger/commands.py
	新文件：   .config/ranger/commands_full.py
	新文件：   .config/ranger/history
	新文件：   .config/ranger/luke_ranger_readme.md
	新文件：   .config/ranger/rc.conf
	新文件：   .config/ranger/rifle.conf
	新文件：   .config/ranger/scope.sh
	新文件：   .config/ranger/shortcuts.conf
	新文件：   .config/ranger/tagged
	重命名：   user-dirs.dirs -> .config/user-dirs.dirs
	新文件：   .config/user-dirs.locale
	新文件：   .config/zathura/zathurarc
	修改：     .gitignore
	修改：     .scripts/launch-input-method
	删除：     user-dirs.locale

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -4,7 +4,7 @@
 ## Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
 #font pango:Hack 8
-font pango:Font Awesome 5 Brands-Regular-400 8
+font pango: DejaVu Sans Mono 12, Font Awesome 5 Brands-Regular-400 8
 
 ################################################################################
 # This config file will use environmental variables such as $BROWSER and $TERMINAL.
@@ -147,7 +147,8 @@ bar {
 #    font pango:Awesome 5 Free 10
 #    font pango:Apple Color Emoji 10
 
-    font pango:Segeo UI 9
+    #font pango:Segeo UI 9
+    font pango:DejaVu Sans Mono 12, FontAwesome 8
     colors {
             background $darkblack
             statusline $darkwhite
